# renovate-poetry-git-reproduction

./: pyproject.toml  renovate.json
