[tool.poetry]
name = "renovate-poetry-git-reproduction"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.10"
pytest-operator-cache = {git = "https://github.com/canonical/data-platform-workflows", tag = "v3.1.0", subdirectory = "python/pytest_plugins/pytest_operator_cache"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
